<resources>
    <string name="app_name">Track It!</string>
    <string name="track_it">Track It!</string>
    <string name="splash_text">Fent unes comprovasions...</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="contrassenya">Contrassenya</string>
    <string name="inicia_sessio">Inicia sessió</string>
    <string name="registra_t">Registra\'t</string>
    <string name="entra_amb_google">Entra amb Google</string>
    <string name="prefs_file">com.pis.trackit.PREFERENCE_FILE_KEY</string>
    <string name="tanca_sessi">Tanca sessió</string>
    <string name="iniciar_sessio">Iniciar sessió</string>
    <string name="has_oblidat_la_contrassenya">Has oblidat la contrassenya?</string>
    <string name="he_oblidat_la_contrassenya">He oblidat la contrassenya</string>
    <string name="introdueix_el_teu_email_i_t_enviarem_un_enlla_per_restablir_la_contrassenya">Introdueix el teu email i t\'enviarem un enllaç per restablir la contrassenya.</string>
    <string name="ja_tens_un_compte">Ja tens un compte?</string>
    <string name="encara_no_tens_un_compte">Encara no tens un compte?</string>
    <string name="continua">Continua</string>
    <string name="email_en_cam">Email en camí!</string>
    <string name="tornar_a_l_inici_de_sessi">Tornar a l\'inici de sessió</string>
    <string name="image_reset_email">TODO</string>
    <string name="o_entra_amb">O entra amb:</string>
    <string name="back">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="transactions_fragment">Transactions Fragment</string>
    <string name="budget_fragment">Budget Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="back_register">TODO</string>
    <string name="despesa">Despesa</string>
    <string name="back_expense">TODO</string>
    <string name="quant">Quant?</string>
    <string name="euro">€</string>
    <string name="descripci">     Descripció</string>
    <string name="repeteix_el_moviment">Repeteix el moviment</string>
    <string name="repeteix">Repeteix</string>
    <string name="fitxer_adjunt">Fitxer adjunt</string>
    <string name="camera">Càmera</string>
    <string name="imatge">Imatge</string>
    <string name="document">Document</string>
    <string name="ingr_s">Ingrés</string>
    <string name="noticies">Notícies</string>
    <string name="back_news">back_news</string>
    <string name="buscar">Buscar</string>
    <string name="selecciona_la_data">Selecciona la data</string>
    <string name="about_us">Track It! és una aplicació desenvolupada per Bet On Green, empresa fundada en el 2022 amb un treball sobre el mercat d\'aplicacions consolidat gràcies al seu equip format pel Noah Màrquez, Alejandro Guzman i Joan Maceo.\n\n L\'equip realitza totes les gestions administratives de l\'empresa, a més de ser el mateix equip encarregat de dissenyar aplicacions com la que estàs utilitzant ara.</string>
    <string name="balan_del_compte">Balanç del compte</string>
    <string name="_0">0€</string>
    <string name="ingressos">Ingressos</string>
    <string name="despeses">Despeses</string>
    <string name="tend_ncia">Tendència</string>
    <string name="iniciarsessio">Iniciar sessió</string>
    <string name="heading">HEADING</string>
    <string name="descc">Esto es una descripción que sirve como plantilla para cualquier SlideAdapter que se vaya a utilizar posteriormente en la implementación de esta funcionalidad de la aplicación.</string>
    <string name="protecci_amb_empremta">Protecció amb empremta</string>
    <string name="activar_empremta">Activar Empremta</string>
    <string name="sobre_nosaltres">Sobre nosaltres</string>
    <string name="tanca_sessio">TANCA SESSIÓ</string>
    <string name="visita_la_p_gina_web">Visita la pàgina web</string>
    <string name="eliminar_transacci">Eliminar transacció</string>
    <string name="editar_transacci">Editar transacció</string>
</resources>